[package]
name = "shaku"
version = "0.2.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Dependency Injection for Rust"
repository = "https://github.com/Mcat12/shaku"
readme = "../README.md"
keywords = ["di", "ioc", "dependency", "inversion", "dependency-injection"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
shaku_derive = { version = "~0.2.0", optional = true }
anymap = "0.12.1"
log = "0.4"

[dev-dependencies]
rand = "0.7.2"
trybuild = "1.0"

[features]
default = ["thread_safe", "derive"]

thread_safe = []
derive = ["shaku_derive"]
