[package]
name = "shaku_actix"
version = "0.2.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Integration between shaku and Actix Web"
repository = "https://github.com/AzureMarker/shaku"
keywords = ["di", "ioc", "dependency", "dependency-injection", "actix"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
actix-web = "4"
futures-util = "0.3"
shaku = { version = ">= 0.5.0, < 0.7.0", path = "../shaku", features = ["thread_safe"] }
