[package]
name = "shaku_axum"
version = "0.6.0"
edition = "2018"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>", "Aaron Housh <dispersias@gmail.com>"]
description = "Integration between shaku and the axum web framework"
repository = "https://github.com/AzureMarker/shaku"
keywords = ["di", "ioc", "dependency", "dependency-injection", "axum"]
license = "MIT/Apache-2.0"

[dependencies]
axum = "0.8"
shaku = { version = ">= 0.5.0, < 0.7.0", path = "../shaku", features = ["thread_safe"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
