[package]
name = "shaku_derive"
version = "0.1.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Code generation for the shaku dependency injection framework"
repository = "https://github.com/Mcat12/shaku"
keywords = ["di", "ioc", "dependency", "inversion", "dependency-injection"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
shaku_internals = "~0.1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"

[dev-dependencies]
shaku = "~0.1.0"
