[package]
name = "shaku_internals"
version = "0.2.1"
authors = ["Boris <boris@humanenginuity.com>"]
description = "Common code for shaku crates"
repository = "https://github.com/humanenginuity/shaku_internals"
documentation = "https://docs.rs/crate/shaku"
keywords = ["di", "ioc", "injection", "inversion", "control"]
categories = ["rust-patterns"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
