[package]
name = "shaku_internals"
version = "0.1.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Common code for shaku crates"
repository = "https://github.com/Mcat12/shaku"
keywords = ["di", "ioc", "dependency", "inversion", "dependency-injection"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
