[package]
name = "shaku_rocket"
version = "0.1.0"
authors = ["Mark <mark.drobnak@gmail.com>"]
description = "Integration between shaku and Rocket"
repository = "https://github.com/Mcat12/shaku"
keywords = ["di", "ioc", "dependency", "inversion", "dependency-injection"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
shaku = "~0.1.0"
rocket = "0.4"

[patch.crates-io]
shaku = { path = "../shaku" }
shaku_internals = { path = "../shaku_internals" }
shaku_derive = { path = "../shaku_derive" }
