[package]
name = "shaku_rocket"
version = "0.3.1"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "Integration between shaku and Rocket"
repository = "https://github.com/Mcat12/shaku"
keywords = ["di", "ioc", "dependency", "inversion", "dependency-injection"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
shaku = { version = "~0.3.1", path = "../shaku" }
rocket = "0.4"
